part 20 I like to implement

--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:fHdBb1BJcRZ6JIAMPQ6Fq9lRHxvReYa/cVinwW9xZ7w=
 APP_DEBUG=true
-APP_URL=http://social-network.test/
+APP_URL=http://social-network.test
 
 LOG_CHANNEL=stack
 
